Created a card, card-list, cart, pagination components (css-task)

--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -3,12 +3,92 @@
 <head>
   <meta charset="UTF-8" />
   <title>Cart component</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <main>
   <div id="root">
-    <!-- Cart component -->
+
+    <div class="cart-container">
+
+      <div class="cart-product">
+        <img src="../images-icons/laptop.svg" alt="product image">
+        <div class="cart-product-title">Ноутбук Acer Aspire 7 A715-41G-R9KP (NH.Q8QEU.00L) Charcoal Black</div>
+        <div class="cart-product-stepper">
+          <button class="cart-btn btn-left">-</button>
+          <label>
+            <input type="text" value="1" style="width: 30px" class="cart-product-input-box">
+          </label>
+          <button class="cart-btn btn-right">+</button>
+        </div>
+        <div class="cart-product-price">15999</div>
+      </div>
+
+      <div class="cart-product">
+        <img src="../images-icons/laptop.svg" alt="product image">
+        <div class="cart-product-title">Ноутбук Acer Aspire 7 A715-41G-R9KP (NH.Q8QEU.00L) Charcoal Black</div>
+        <div class="cart-product-stepper">
+          <button class="cart-btn btn-left">-</button>
+          <label>
+            <input type="text" value="1" style="width: 30px" class="cart-product-input-box">
+          </label>
+          <button class="cart-btn btn-right">+</button>
+        </div>
+        <div class="cart-product-price">15999</div>
+      </div>
+
+      <div class="cart-product">
+        <img src="../images-icons/laptop.svg" alt="product image">
+        <div class="cart-product-title">Ноутбук Acer Aspire 7 A715-41G-R9KP (NH.Q8QEU.00L) Charcoal Black</div>
+        <div class="cart-product-stepper">
+          <button class="cart-btn btn-left">-</button>
+          <label>
+            <input type="text" value="1" style="width: 30px" class="cart-product-input-box">
+          </label>
+          <button class="cart-btn btn-right">+</button>
+        </div>
+        <div class="cart-product-price">15999</div>
+      </div>
+
+      <div class="cart-product">
+        <img src="../images-icons/laptop.svg" alt="product image">
+        <div class="cart-product-title">Ноутбук Acer Aspire 7 A715-41G-R9KP (NH.Q8QEU.00L) Charcoal Black</div>
+        <div class="cart-product-stepper">
+          <button class="cart-btn btn-left">-</button>
+          <label>
+            <input type="text" value="1" style="width: 30px" class="cart-product-input-box">
+          </label>
+          <button class="cart-btn btn-right">+</button>
+        </div>
+        <div class="cart-product-price">15999</div>
+      </div>
+
+      <div class="cart-product">
+        <img src="../images-icons/laptop.svg" alt="product image">
+        <div class="cart-product-title">Ноутбук Acer Aspire 7 A715-41G-R9KP (NH.Q8QEU.00L) Charcoal Black</div>
+        <div class="cart-product-stepper">
+          <button class="cart-btn">-</button>
+          <label>
+            <input type="text" value="1" style="width: 30px" class="cart-product-input-box">
+          </label>
+          <button class="cart-btn">+</button>
+        </div>
+        <div class="cart-product-price">15999</div>
+      </div>
+
+      <div class="cart-total-price">Total: 111990</div>
+
+      <div class="btn-order">
+        <button class="cart-btn-order">ORDER</button>
+      </div>
+
+    </div>
+
   </div>
 </main>
 </body>
