--- a/src/components/cart/01-css-task/style.css
+++ b/src/components/cart/01-css-task/style.css
@@ -1,2 +1,62 @@
 /* put your styles in this file */
 /*@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";*/
+
+* {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.cart-container {
+  background: #aed8e6;
+  padding: 0 30px;
+  border: 1px solid #aed8e6;
+}
+
+.cart-product {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px;
+  margin: 30px 0;
+  background: white;
+  border-radius: 5px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.133);
+}
+
+div img {
+  max-width: 80px;
+}
+
+.cart-product-stepper {
+  display: flex;
+}
+
+.cart-btn {
+  border-radius: 50%;
+  cursor: pointer;
+  border: 1px solid black;
+}
+
+.cart-product-input-box {
+  border: none;
+  text-align: center;
+}
+
+.cart-total-price {
+  text-align: center;
+}
+
+.btn-order {
+  display: flex;
+  justify-content: center;
+  margin: 20px auto 30px;
+}
+
+.cart-btn-order {
+  cursor: pointer;
+  width: 200px;
+  height: 30px;
+  border: 1px solid #7f72f2;
+  border-radius: 5px;
+  background: #7f72f2;
+  color: white;
+}
