jS Pagination component implementation (base commit)

--- a/src/components/pagination/02-js-task/index.html
+++ b/src/components/pagination/02-js-task/index.html
@@ -17,7 +17,7 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import Pagination from './solution/index.js';
+    import Pagination from './index.js';
 
     const pagination = new Pagination({
       totalPages: 10,
