--- a/src/components/double-slider/02-js-task/index.html
+++ b/src/components/double-slider/02-js-task/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <title>[Component] component</title>
-  <link rel="stylesheet" href="../../../styles/style.min.css">
+  <link rel="stylesheet" href="style.css">
 
   <style>
     .wrapper {
       width: 400px;
+      height: 100px;
       margin: 100px auto;
     }
   </style>
@@ -17,7 +18,7 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import DoubleSlider from './solution/index.js';
+    import DoubleSlider from './index.js';
 
     const slider = new DoubleSlider();
 
