--- a/src/components/cart/02-js-task/index.html
+++ b/src/components/cart/02-js-task/index.html
@@ -10,7 +10,7 @@
   <div id="root"></div>
 
   <script type="module">
-    import Cart from './solution/index.js';
+    import Cart from './index.js';
     import { products } from '../../../fixtures/products.js';
 
     const cart = new Cart();
