--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -3,21 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Card component</title>
-  <link rel="stylesheet" href="../../../styles/style.min.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="../../../styles/reset.css">
+  <link rel="stylesheet" href="../01-css-task/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
+<body class="test">
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import Card from './solution/index.js';
+    import Card from './index.js';
 
     const product = {
       "id": "76w0hz7015kkr9kjkav",
@@ -33,8 +29,8 @@
     };
 
     const card = new Card(product);
-
-    root.append(card.element);
+  const myElement=document.querySelector('.test')
+    myElement.append(card.componentElement);
   </script>
 </body>
 </html>
