--- a/src/components/cards-list/01-css-task/index.html
+++ b/src/components/cards-list/01-css-task/index.html
@@ -5,17 +5,13 @@
   <title>CardsList component</title>
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
 
-    }
-  </style>
 </head>
 <body>
 <main>
-  <div class="wrapper">
-    <!-- CardsList component -->
-  </div>
+ <section class="card-list">
+
+ </section>
 </main>
 </body>
 </html>
