--- a/src/components/search-box/02-js-task/index.html
+++ b/src/components/search-box/02-js-task/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>SearchBox component</title>
-  <link rel="stylesheet" href="../../../styles/style.min.css">
+  <link rel="stylesheet" href="style.css">
 
   <style>
     .wrapper {
@@ -17,7 +17,7 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import Search from './solution/index.js';
+    import Search from './index.js';
 
     const search = new Search();
 
