--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Card component</title>
-  <link rel="stylesheet" href="../../../styles/style.min.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+  <link rel="stylesheet" href="../../../styles/style-card.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div id="root" class="wrapper"></div>
-
   <script type="module">
-    import Card from './solution/index.js';
 
     const product = {
       "id": "76w0hz7015kkr9kjkav",
@@ -26,15 +19,61 @@
         "https://content.rozetka.com.ua/goods/images/big_tile/163399633.jpg"
       ],
       "title": "Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black",
-      "rating": 2.89,
+      "rating": 1.23,
       "price": 15999,
       "category": "laptops",
       "brand": "acer"
     };
 
-    const card = new Card(product);
 
-    root.append(card.element);
+    class Component {
+      constructor(product) {
+        this.product = product;
+        this.myRender();
+      }
+
+      getTemplate() {
+        return `
+  <main class="product-card">
+    <div class="product-image">
+      <img class="image" src="${this.product.images[0]}" alt="laptop">
+    </div>
+    <div class="product-rating-and-price mt-md">
+      <div class="product-rating">
+        <span class="product-rating-number">${this.product.rating}</span>
+        <svg class="star-icon" width="14" height="12" viewbox="0 0 14 12" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M7 0.940965L8.8394 3.87345L8.95364 4.05557L9.16441 4.09795L12.6648 4.80181L10.3013 7.25805L10.1392 7.42652L10.1645 7.65893L10.5264 10.9777L7.18936 9.61224L7 9.53476L6.81064 9.61224L3.47361 10.9777L3.83549 7.65893L3.86083 7.42652L3.69872 7.25805L1.3352 4.80181L4.83559 4.09795L5.04636 4.05557L5.1606 3.87345L7 0.940965Z"
+            stroke="white" />
+        </svg>
+      </div>
+      <span class="product-price">${this.product.price}</span>
+    </div>
+    <span class="product-description mt-md">${this.product.title}</span>
+    <p class="product-category mt-md">${this.product.category}</p>
+    <button class="add-to-cart-btn">add to cart</button>
+  </main>
+  `;
+      }
+
+
+      myRender() {
+        const element = document.createElement('div');
+        element.innerHTML = this.getTemplate();
+        this.componentElement = element;
+      }
+    }
+
+
+    const obj = new Component(product);
+    const myRootElement = document.querySelector('#root');
+    myRootElement.append(obj.componentElement);
+
+
+    import Card from './index.js';
+
   </script>
 </body>
+
 </html>
