--- a/src/styles/style-card.css
+++ b/src/styles/style-card.css
@@ -4,6 +4,11 @@
   font-weight: 400;
 }
 
+.wrapper {
+  width: 400px;
+  margin: 100px auto;
+}
+
 .product-card-list {
   display: flex;
   flex-wrap: wrap;
@@ -80,7 +85,7 @@
   background-color: #7E72F2;
   border-radius: 0px 0px 5px 5px;
   border: none;
-  margin-top: 15px;
+  margin-top: 6px;
   font-size: 12px;
   line-height: 12px;
   text-align: center;
