eddited pagination component

--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -3,23 +3,33 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Pagination component</title>
+  <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 800px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
+  <main>
+    <div class="wrapper">
+      <button class="page-buttons previous-page">
+        <i class="bi bi-chevron-left"></i>
+      </button>
+      <button class="page-buttons"><span class="page-number">1</span></button>
+      <button class="page-buttons"><span class="page-number">2</span></button>
+      <button class="page-buttons"><span class="page-number">3</span></button>
+      <button class="page-buttons"><span class="page-number">4</span></button>
+      <button class="page-buttons"><span class="page-number">5</span></button>
+      <button class="page-buttons"><span class="page-number">6</span></button>
+      <button class="page-buttons"><span class="page-number">7</span></button>
+      <button class="page-buttons"><span class="page-number">8</span></button>
+      <button class="page-buttons"><span class="page-number">9</span></button>
+      <button class="page-buttons"><span class="page-number">10</span></button>
+      <button class="page-buttons"><span class="page-number">11</span></button>
+      <button class="page-buttons"><span class="page-number">12</span></button>
+      <button class="page-buttons next-page">
+        <i class="bi bi-chevron-right"></i>
+      </button>
+    </div>
+  </main>
 </body>
 
 </html>
