--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Cart component</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../../styles/style-cart.css">
 </head>
 
 <body>
