--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Card component</title>
-  <link rel="stylesheet" href="../../../styles/style.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="./styles/styles.css">
 
   <style>
     .wrapper {
@@ -17,13 +19,11 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import Card from './solution/index.js';
 
     const product = {
       "id": "76w0hz7015kkr9kjkav",
       "images": [
         "https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg",
-        "https://content.rozetka.com.ua/goods/images/big_tile/163399633.jpg"
       ],
       "title": "Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black",
       "rating": 2.89,
@@ -32,9 +32,59 @@
       "brand": "acer"
     };
 
-    const card = new Card(product);
+    class Component {
+      constructor (someProduct) {
+        this.componentProduct = someProduct;
+        this.myRender();
+      }
 
-    root.append(card.element);
+      getMyTemplate () {
+        return `
+        <div class="os-product-card">
+        <div class="os-product-image"></div>
+
+        <div class="os-product-details">
+          <div class="os-product-price-wrapper">
+            <div class="os-product-rating">
+              <span>${this.componentProduct.rating}</span>
+              <i class="bi bi-star"></i>
+            </div>
+          <div class="os-product-price">${this.componentProduct.price}</div>
+        </div>
+
+        <h5 class="os-product-title">${this.componentProduct.title}</h5>
+
+        <p class="os-product-description">${this.componentProduct.category}</p>
+
+        </div>
+
+        <div class="os-product-cart">
+          <button class="os-btn">
+            Add to Cart
+          </button>
+        </div>
+
+        </div>
+        `;
+      }
+
+      myRender () {
+        const element = document.createElement('div');
+
+        element.innerHTML = this.getMyTemplate();
+
+        this.componentElement = element;
+      }
+    }
+
+    const obj = new Component(product);
+
+    const myRootElement = document.querySelector('#root');
+
+    console.log (obj);
+
+    myRootElement.append(obj.componentElement);
+
   </script>
 </body>
 </html>
