add index.js to product-card, add class Card

--- a/src/components/product-card/index.html
+++ b/src/components/product-card/index.html
@@ -14,24 +14,10 @@
 </head>
 <body>
 <main>
-  <div class="wrapper">
-    <div class="product-card">
-      <img src="../../img/notebook_acer_aspire_3.jpg" alt="notebook" class="product-card__img">
-      <div class="product-card__content">
-        <div class="product-card__wrapper">
-          <div class="product-card__rating">
-            <div class="product-card__rating-count">1.23</div>
-            <i class="icon-star"></i>
-          </div>
-          <div class="product-card__price">15999</div>
-        </div>
-        <div class="product-card__title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</div>
-        <div class="product-card__category">laptops</div>
-      </div>
-      <button class="button">Add To Cart</button>
-    </div>
-  </div>
+  <div id="root" class="wrapper"></div>
 </main>
+
+  <script src="./index.js"></script>
 </body>
 </html>
 
