--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Card component</title>
-  <link rel="stylesheet" href="../../../styles/style.min.css">
+  <link rel="stylesheet" href="/online-store/src/components/card/01-css-task/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
   <style>
     .wrapper {
@@ -17,14 +18,10 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import Card from './solution/index.js';
 
     const product = {
       "id": "76w0hz7015kkr9kjkav",
-      "images": [
-        "https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg",
-        "https://content.rozetka.com.ua/goods/images/big_tile/163399633.jpg"
-      ],
+      "images": "/online-store/src/components/card/01-css-task/img/A315-57G-336G.png",
       "title": "Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black",
       "rating": 2.89,
       "price": 15999,
@@ -32,9 +29,52 @@
       "brand": "acer"
     };
 
-    const card = new Card(product);
+      class Component {
+        constructor (someProduct) {
+          this.componentProduct = someProduct;
+          this.myRender();
+        }
 
-    root.append(card.element);
-  </script>
+        getTemplate () {
+          return `
+          <div class="card_container">
+        <div class="card_item-photo">
+          <img src="${this.componentProduct.images}">
+        </div>
+        <div class="card_descriptin">
+            <div class="card-item_pr-rt">
+                <div class="card_rate">
+                  <span>${this.componentProduct.rating}</span>
+                  <i class="bi bi-star"></i>
+                </div>
+                <div class="card_price">${this.componentProduct.price}</div>
+            </div>
+            <h5 class="card_title">${this.componentProduct.title}</h5>
+            <p class="card_category">${this.componentProduct.category}</p>
+        </div>
+        <div class="card_footer">
+            <button>
+              ADD TO CART
+            </button>
+      </div>
+    </div>
+          `
+        }
+
+
+        myRender () {
+          const element = document.createElement('div');
+          element.innerHTML = this.getTemplate();
+          this.componentElement = element;
+        }
+
+      }
+
+      const obj = new Component(product);
+      const myRootElement = document.querySelector('#root');
+      myRootElement.append(obj.componentElement);
+
+</script>
+
 </body>
 </html>
