--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -1,47 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD:src/components/card/01-css-task/index.html
-<head>
-  <meta charset="UTF-8" />
-  <title>Card component</title>
-  <link rel="stylesheet" href="style.css">
-=======
   <head>
     <meta charset="UTF-8" />
     <title>HTML/CSS Card component</title>
-    <link rel="stylesheet" href="c-style.css" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="card-style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   </head>
   <body>
     <main>
       <div class="wrapper">
-        <div class="product-card">
+        <div class="os-product-card">
           <div
-            class="product-img"
+            class="os-product-img"
             style="
               background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);
             "
           ></div>
->>>>>>> main:components/card/index.html
 
-          <div class="product-content">
-            <div class="product-price-wrapper">
-              <div class="product-rating">
+          <div class="os-product-content">
+            <div class="os-product-price-wrapper">
+              <div class="os-product-rating">
                 <span>2.89</span>
                 <i class="bi bi-star">&nbsp;</i>
               </div>
 
-              <div class="product-price">15999</div>
+              <div class="os-product-price">15999</div>
             </div>
 
-            <h5 class="product-title">
+            <h5 class="os-product-title">
               Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
             </h5>
-            <p class="product-description">laptops</p>
+            <p class="os-product-description">laptops</p>
           </div>
 
-          <footer class="product-footer">
-            <button class="btn-primary">
+          <footer class="os-product-footer">
+            <button class="os-btn-primary" data-element="addToCartBtn">
               Add To Cart
             </button>
           </footer>
@@ -50,5 +44,6 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
   </body>
 </html>
