--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Card component</title>
-  <link rel="stylesheet" href="../../../styles/style.min.css">
+  <link rel="stylesheet" href="..\01-css-task\style.css">
+  <link rel="stylesheet" href="..\01-css-task\card-style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
   <style>
     .wrapper {
@@ -17,9 +19,7 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import Card from './solution/index.js';
-
-    const product = {
+      const product = {
       "id": "76w0hz7015kkr9kjkav",
       "images": [
         "https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg",
@@ -32,9 +32,55 @@
       "brand": "acer"
     };
 
-    const card = new Card(product);
+    class Component {
+      constructor (someProduct) {
+      this.componentProduct = someProduct;
+      this.myRender ();
 
-    root.append(card.element);
+    }
+
+    getTemplate () {
+      return `
+      <div class="os-product-card">
+          <div class="os-product-img" style="background-image: url(${this.componentProduct.images[0]});"></div>
+          <div class="os-product-content">
+            <div class="os-product-price-wrapper">
+              <div class="os-product-rating">
+                <span>${this.componentProduct.rating}</span>
+                <i class="bi bi-star"></i>
+              </div>
+
+              <div class="os-product-price">15999</div>
+            </div>
+
+            <h5 class="os-product-title">${this.componentProduct.title}</h5>
+            <p class="os-product-description">${this.componentProduct.category}</p>
+          </div>
+
+          <footer class="os-product-footer">
+            <button class="os-btn-primary" data-element="addToCartBtn">
+              Add To Cart
+            </button>
+          </footer>
+          </div>
+        `;
+      }
+
+    myRender () {
+      const element = document.createElement ('div');
+      element.innerHTML = this.getTemplate();
+
+      this.componentElement = element;
+    }
+  }
+    const obj = new Component(product);
+
+    const myRootElement = document.querySelector('#root');
+    console.log(obj);
+    myRootElement.append(obj.componentElement);
   </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
