--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -21,7 +21,7 @@
         <div class="os-cart-quantaty-count">
           <button class="os-cart-btn"><i class="bi bi-dash-circle"></i></button>
           <span>1</span>
-          <button class="os-cart-btn"><i class="bi bi-plus-circle"></i></i></button>
+          <button class="os-cart-btn"><i class="bi bi-plus-circle"></i></button>
         </div>
         <div class="os-cart-price">15555</div>
       </li>
@@ -33,7 +33,7 @@
         <div class="os-cart-quantaty-count">
           <button class="os-cart-btn"><i class="bi bi-dash-circle"></i></button>
           <span>1</span>
-          <button class="os-cart-btn"><i class="bi bi-plus-circle"></i></i></button>
+          <button class="os-cart-btn"><i class="bi bi-plus-circle"></i></button>
         </div>
         <div class="os-cart-price">15555</div>
       </li>
@@ -45,7 +45,7 @@
         <div class="os-cart-quantaty-count">
           <button class="os-cart-btn"><i class="bi bi-dash-circle"></i></button>
           <span>1</span>
-          <button class="os-cart-btn"><i class="bi bi-plus-circle"></i></i></button>
+          <button class="os-cart-btn"><i class="bi bi-plus-circle"></i></button>
         </div>
         <div class="os-cart-price">15555</div>
       </li>
@@ -57,7 +57,7 @@
         <div class="os-cart-quantaty-count">
           <button class="os-cart-btn"><i class="bi bi-dash-circle"></i></button>
           <span>1</span>
-          <button class="os-cart-btn"><i class="bi bi-plus-circle"></i></i></button>
+          <button class="os-cart-btn"><i class="bi bi-plus-circle"></i></button>
         </div>
         <div class="os-cart-price">15555</div>
       </li>
@@ -69,7 +69,7 @@
         <div class="os-cart-quantaty-count">
           <button class="os-cart-btn"><i class="bi bi-dash-circle"></i></button>
           <span>1</span>
-          <button class="os-cart-btn"><i class="bi bi-plus-circle"></i></i></button>
+          <button class="os-cart-btn"><i class="bi bi-plus-circle"></i></button>
         </div>
         <div class="os-cart-price">15555</div>
       </li>
