--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -1,5 +1,7 @@
 /* put your styles in this file */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+
 *{
   font-family: 'Montserrat', sans-serif;
 }
@@ -14,7 +16,7 @@ a,p{
   width: 317px;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.133);
-  margin: 0 auto;
+  margin: 10rem auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -74,4 +76,35 @@ a,p{
   border:0;
   width: 100%;
   padding: 0.5rem 0;
+}
+.wrapper{
+  margin: 100px auto;
+  width: 790px;
+}
+.pagination{
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.pagination-element{
+  display: flex;
+  font-size: 10px;
+  border-radius: 50%;
+  background: var(--background-grey);
+  height: 40px;
+  width: 40px;
+  align-items: center;
+  justify-content: center;
+
+}
+.pagination>li:first-child,.pagination>li:last-child{
+  margin:1rem;
+}
+
+.pagination-element:hover, .pagination>.active{
+  background: var(--main-color);
+  color: var(--white-color);
 }
