--- a/src/components/card/02-js-task/style.css
+++ b/src/components/card/02-js-task/style.css
@@ -1,6 +1,3 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
- /*put your styles in this file */
-
 :root {
   --var-bg-wrapper: #FFFFFF;
   --var-color-bg-body: #E5E5E5;
@@ -9,38 +6,31 @@
   --var-color-number: #2C2C2C;
 }
 
-body {
-  background: var(--var-color-bg-body);
-}
-
-.size {
+.siz {
   background: var(--var-color-circle-bg-defolt);
-  width: 2.4rem;
-  height: 2.4rem;
-  font-weight: 800;
-  border-radius: 1.2rem;
+  width: 1.4rem;
+  height: 1.4rem;
+  font-weight: 600;
+  font-size: 0.8rem;
+  border-radius: 0.7rem;
   display: flex;
   justify-content: center;
   align-items: center;
   box-shadow: 0 2px 8px gray;
+
 }
 
-.size:hover {
+.siz:hover {
   background: var(--var-color-hover);
   border: 1px solid var(--var-color-circle-bg-defolt);
   color: var(--var-color-circle-bg-defolt);
   transition: .3s;
   box-sizing: border-box;
+  cursor: pointer;
 }
 
-img {
-  font-weight: 800;
-  width: 0.7rem;
-}
-
-.wrapper {
-  width: 55rem;
-  height: 15rem;
+.pagination {
+  width: 100%;
   background: var(--var-bg-wrapper);
   color: var(--var-color-number);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.133);
@@ -48,12 +38,17 @@ img {
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
-  padding: 6rem 4rem 6rem 4rem;
+  padding: 1rem 1rem 1rem 1rem;
+}
+
+.imgP {
+  font-weight: 500;
+  width: 0.5rem;
 }
 
 .numbers {
-  width: 40rem;
-  margin: 0 2rem 0 2rem;
+  width: 100%;
+  margin: 0 1rem 0 1rem;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
