--- a/src/components/cards-list/02-js-task/index.html
+++ b/src/components/cards-list/02-js-task/index.html
@@ -11,6 +11,7 @@
 
   <script type="module">
     import Card from '../../card/example/index.js';
+    // import Card from '../../card/02-js-task/index';
     import CardsList from './index.js';
     import { products } from '../../../fixtures/products.js'
 
