--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Card component</title>
+  <link rel="stylesheet" href="../../../styles/reset.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="../01-css-task/style.css">
   <link rel="stylesheet" href="../../../styles/style.min.css">
+
 
   <style>
     .wrapper {
@@ -17,9 +22,7 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import Card from './solution/index.js';
-
-    const product = {
+      const product = {
       "id": "76w0hz7015kkr9kjkav",
       "images": [
         "https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg",
@@ -31,10 +34,70 @@
       "category": "laptops",
       "brand": "acer"
     };
+    class Component {
+      constructor(someProduct) {
+        this.componentProduct = someProduct;
+        this.myRender();
+      }
+      getTemplate (){
+        return `
+        <div class="card">
+          <img class="product_photo" src="${this.componentProduct.images[0]}" alt="Фото товару">
+           <div class="product_content">
+            <span class="bloc_favorite">
+             <span class="counter">${this.componentProduct.rating}</span>
+            <span class="btn_favorite"><i class="bi bi-star"></i></span>
+           </span>
+          <span class="price">${this.componentProduct.price}</span>
+          <div class="description">
+            <h5>${this.componentProduct.title}</h5>
+          </div>
+          <div class="category">
+            <p>${this.componentProduct.category}</p>
+          </div>
+        </div>
+        <button class="btn_addToCart">ADD TO CART</button>
+      </div>
+        `
+      }
+      myRender() {
+        const element = document.createElement('div');
+        element.innerHTML = this.getTemplate();
+        this.componentElement = element;
+      }
+    }
+    const obj = new Component(product);
+    const myRootElement = document.querySelector('#root');
+    myRootElement.append(obj.componentElement);
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    /*  import Card from './solution/index.js';
     const card = new Card(product);
+    root.append(card.element);*/
 
-    root.append(card.element);
+
+
+
   </script>
 </body>
+
 </html>
