Add all css-components

--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -12,7 +12,7 @@
 <main>
   <div class="wrapper">
     <div class="card">
-      <div class="item"></div>
+      <div class="item", style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg)"></div>
 
       <div class="item-content">
 
