--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -7,8 +7,65 @@
 </head>
 <body>
 <main>
-  <div id="root">
-    <!-- Cart component -->
+  <div id="root" class="wrapper">
+    <div class="order-el">
+      <div class="img"></div>
+      <p class="el-text">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+      <div class="add-el">
+        <i class="bi bi-dash-circle"></i>
+        <p class="el-text">1</p>
+        <i class="bi bi-plus-circle"></i>
+      </div>
+      <p class="el-text">47997</p>
+    </div>
+
+    <div class="order-el">
+      <div class="img"></div>
+      <p class="el-text">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+      <div class="add-el">
+        <i class="bi bi-dash-circle"></i>
+        <p class="el-text">1</p>
+        <i class="bi bi-plus-circle"></i>
+      </div>
+      <p class="el-text">47997</p>
+    </div>
+
+    <div class="order-el">
+      <div class="img"></div>
+      <p class="el-text">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+      <div class="add-el">
+        <i class="bi bi-dash-circle"></i>
+        <p class="el-text">1</p>
+        <i class="bi bi-plus-circle"></i>
+      </div>
+      <p class="el-text">47997</p>
+    </div>
+
+    <div class="order-el">
+      <div class="img"></div>
+      <p class="el-text">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+      <div class="add-el">
+        <i class="bi bi-dash-circle"></i>
+        <p class="el-text">1</p>
+        <i class="bi bi-plus-circle"></i>
+      </div>
+      <p class="el-text">47997</p>
+    </div>
+
+    <div class="order-el">
+      <div class="img"></div>
+      <p class="el-text">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+      <div class="add-el">
+        <i class="bi bi-dash-circle"></i>
+        <p class="el-text">1</p>
+        <i class="bi bi-plus-circle"></i>
+      </div>
+      <p class="el-text">47997</p>
+    </div>
+
+    <p class="sum-of-order">Total: 92584</p>
+
+    <button class="order-button">Order</button>
   </div>
 </main>
 </body>
