--- a/src/components/double-slider/01-css-task/index.html
+++ b/src/components/double-slider/01-css-task/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>DoubleSlider component</title>
   <link rel="stylesheet" href="style.css">
-
+  <link href='//fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <style>
     .wrapper {
       width: 400px;
