--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -20,6 +20,21 @@
         <input type="checkbox" class="variant" name="Computer-Tables">
         <label for="Computer-Tables">Computer & Tables</label>  
       </div>
+
+      <div class="filter-checkbox">
+        <input type="checkbox" class="variant" name="Cell-Phone-Accessories">
+        <label for="Cell-Phone-Accessories">Cell Phone Accessories</label>  
+      </div>
+
+      <div class="filter-checkbox">
+        <input type="checkbox" class="variant" name="Appliances">
+        <label for="Appliances">Appliances</label>  
+      </div>
+
+      <div class="filter-checkbox">
+        <input type="checkbox" class="variant" name="Audio">
+        <label for="Audio">Audio</label>  
+      </div>
     </div>
   </div>
 </main>
