--- a/src/components/cart/01-css-task/style.css
+++ b/src/components/cart/01-css-task/style.css
@@ -1,2 +1,64 @@
-/* put your styles in this file */
-/*@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";*/
+@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";
+
+.wrapper {
+    padding-top: 50px;
+    width: 987px;
+    height: auto;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.order-el {
+    display: flex;
+    flex-direction: row;
+    width: 967px;
+    margin: 0 auto;
+    margin-bottom: 15px;
+    height: 70px;
+    border-radius: 3px;
+    box-shadow: 0px 2px 8px rgba(0 0 0 / 14%);
+    align-items: center;
+    justify-content: space-around;
+}
+
+.img {
+    width: 56px;
+    height: 40px;
+    background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center
+}
+
+.add-el {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.el-text {
+    font-size: 1rem;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.sum-of-order {
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+.order-button {
+    display: flex;
+    width: 200px;
+    height: 28px;
+    margin: 0 auto;
+    padding: 0;
+    border: none;
+    color: white;
+    text-align: center;
+    display: block;
+    border-radius: 8px;
+    background-color: #7E72F2;
+    text-transform: uppercase;
+}
