--- a/src/components/side-bar/01-css-task/style.css
+++ b/src/components/side-bar/01-css-task/style.css
@@ -1,1 +1,44 @@
-/* put your styles in this file */
+.side-bar {
+    display: flex;
+    flex-direction: column;
+    width: 280px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    align-content: space-between;
+    height: auto;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 8px rgba(0 0 0 / 14%);
+    border-radius: 8px;
+    justify-content: space-between;
+    box-sizing: border-box;
+  }
+
+  .side-component {
+    display: flex;
+    flex-direction: column;
+    width: 240px;
+    margin: 0 auto;
+    height: auto;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+
+  .side-component-name {
+    margin-bottom: 20px;
+    font-size: 1.25rem;
+  }
+
+  .clear-button {
+    display: flex;
+    width: 280px;
+    height: 40px;
+    margin: 0 auto;
+    padding: 0;
+    border: none;
+    color: white;
+    text-align: center;
+    display: block;
+    border-radius: 8px;
+    background-color: #7E72F2;
+    text-transform: uppercase;
+  }
